# src/entities/Place/routes/index.ts
@@ -7,6 +7,7 @@ import { getPlaceCategories } from "./getPlaceCategories"
 import { getPlaceList } from "./getPlaceList"
 import { getPlaceListById } from "./getPlaceListById"
 import { getPlaceStatusListById } from "./getPlaceStatusListById"
+import { updateRanking } from "./updateRanking"
 import { updateRating } from "./updateRating"
 
 export const DECENTRALAND_URL = env("DECENTRALAND_URL", "")
@@ -33,7 +34,7 @@ export default routes((router) => {
   router.get("/places", getPlaceList)
   router.post("/places", getPlaceListById)
   router.put("/places/:place_id/rating", updateRating)
+  router.put("/places/:place_id/ranking", updateRanking)
   router.get("/places/:place_id/categories", getPlaceCategories)
-  router.put("/places/:place_id/rating", updateRating)
   router.post("/places/status", getPlaceStatusListById)
 }, {})
