# src/entities/Place/types.ts
@@ -133,3 +133,7 @@ export type UpdateRatingBody = {
   content_rating: SceneContentRating
   comment?: string
 }
+
+export type UpdateRankingBody = {
+  ranking: number | null
+}
